# HPA_model_simulter

./: HPA_model_simulter.py  HPA_model_simulter_fast_slow.py  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: report.py
src/: HPA_model_simulter.py
