[project]
name = "hpa-model-simulter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.1.0",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
